<!--
  ~ Copyright 2017 vinayagasundar
  ~ Copyright 2017 randhirgupta
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <string name="app_name">Minimal Weather</string>
    
    
    <string name="label_sunrise">sunrise</string>
    <string name="label_wind">wind</string>
    <string name="label_temperature">temperature</string>


    <string name="desc_weather_status_image">Display current weather status information</string>
    <string name="desc_sunrise">Display the Sunrise time</string>
    <string name="desc_wind">Display the Wind Speed</string>
    <string name="desc_temperature">Display the Temperature</string>

    <string name="temp_in_celsius">%.2f\u00B0 C</string>
    <string name="wind_speed_in_miles">%.2f m/s</string>
    <string name="nav_add_city">Add City</string>
    <string name="bottom_nav_more">More</string>
    <string name="label_auto_night_mode">Auto Night Mode</string>
</resources>
